--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -2,4 +2,6 @@
 @import "base/color";
 @import "layouts/layout";
 @import "base/base";
+@import "base/font";
 @import "modules/spacing";
+@import "modules/border";
