--- a/src/assets/scss/base/_color.scss
+++ b/src/assets/scss/base/_color.scss
@@ -15,3 +15,9 @@
 .text-blue-6 {
 	color: $blue-6 !important;
 }
+.text-gray-7 {
+	color: $gray-7 !important;
+}
+.text-gray-8 {
+	color: $gray-8 !important;
+}
