--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,9 +1,12 @@
 $green-6: #52c41a;
 
-$blue-4: #69C0FF;
-$blue-5: #40A9FF;
-$blue-6: #1890FF;
+$blue-4: #69c0ff;
+$blue-5: #40a9ff;
+$blue-6: #1890ff;
 
 $white: #fff;
 
-$gray-2: #FAFAFA;
+$gray-2: #fafafa;
+$gray-5: #d9d9d9;
+$gray-7: #8c8c8c;
+$gray-8: #595959;
