--- a/src/assets/scss/base/_font.scss
+++ b/src/assets/scss/base/_font.scss
@@ -6,5 +6,8 @@
 }
 .h6 {
 	font-size: 16px !important;
-  font-weight: bold;
+	font-weight: bold;
+}
+.text-align-center {
+	text-align: center !important;
 }
