--- a/src/assets/scss/modules/_spacing.scss
+++ b/src/assets/scss/modules/_spacing.scss
@@ -1,7 +1,18 @@
 .mb-0 {
 	margin-bottom: 0 !important;
 }
+.mb-auto {
+	margin-bottom: auto !important;
+}
 .my-1 {
 	margin-top: 0.25rem !important;
 	margin-bottom: 0.25rem !important;
+}
+.my-auto {
+	margin-top: auto !important;
+	margin-bottom: auto !important;
+}
+.mx-auto {
+	margin-left: auto !important;
+	margin-right: auto !important;
 }
