--- a/src/assets/scss/layouts/_layout.scss
+++ b/src/assets/scss/layouts/_layout.scss
@@ -1,58 +1,62 @@
 .d-flex {
-	display: flex !important;
+  display: flex !important;
 }
 .flex-1 {
-	flex: 1 !important;
+  flex: 1 !important;
 }
 .flex-column {
-	flex-direction: column !important;
+  flex-direction: column !important;
 }
 .flex-row {
-	flex-direction: row !important;
+  flex-direction: row !important;
 }
 .justify-space-between {
-	justify-content: space-between !important;
+  justify-content: space-between !important;
 }
 .justify-flex-end {
-	justify-content: flex-end !important;
+  justify-content: flex-end !important;
 }
 .justify-center {
-	justify-content: center !important;
+  justify-content: center !important;
 }
 .align-center,
 .align-items-center {
-	align-items: center !important;
+  align-items: center !important;
 }
 .align-items-flex-start {
-	align-items: flex-start !important;
+  align-items: flex-start !important;
 }
-.align-flex-end {
-	align-items: flex-end !important;
+.align-flex-end,
+.align-items-flex-end {
+  align-items: flex-end !important;
+}
+.w-100 {
+  width: 100% !important;
 }
 .header {
-	&__logo {
-		background: $blue-4;
-		color: $gray-2 !important;
-		padding: 10px 15px;
-		border-radius: 9px;
-	}
-	&__item {
-		&:hover {
-			color: $blue-5;
-		}
-		&--selected {
-			color: $blue-5 !important;
-			font-size: large !important;
-		}
-	}
-	&__admin {
-		background: $white;
-		box-shadow: 0px 2px 8px #f0f1f2;
-		padding: 30px 25px 6px 25px;
-		margin-bottom: 60px;
-	}
-	&__contain-logo {
-		gap: 0 !important;
-		align-items: flex-end;
-	}
+  &__logo {
+    background: $blue-4;
+    color: $gray-2 !important;
+    padding: 10px 15px;
+    border-radius: 9px;
+  }
+  &__item {
+    &:hover {
+      color: $blue-5;
+    }
+    &--selected {
+      color: $blue-5 !important;
+      font-size: large !important;
+    }
+  }
+  &__admin {
+    background: $white;
+    box-shadow: 0px 2px 8px #f0f1f2;
+    padding: 30px 25px 6px 25px;
+    margin-bottom: 60px;
+  }
+  &__contain-logo {
+    gap: 0 !important;
+    align-items: flex-end;
+  }
 }
