--- a/src/assets/scss/modules/_border.scss
+++ b/src/assets/scss/modules/_border.scss
@@ -5,6 +5,11 @@
 .rounded-10 {
 	border-radius: 10px;
 }
+
+.rounded-5 {
+	border-radius: 5px !important;
+}
+
 .border-with-shadow {
 	border: 0.5px solid $gray-5;
 	box-sizing: border-box;
