Fix maximum length of book's name in BooksSection, remove border ISBN, Publisher

--- a/src/assets/scss/layouts/_layout.scss
+++ b/src/assets/scss/layouts/_layout.scss
@@ -59,3 +59,15 @@
     align-items: flex-end;
   }
 }
+.custom-checkbox {
+  display: flex !important;
+  flex-direction: column-reverse;
+  row-gap: 0.5rem;
+  align-items: center !important;
+}
+.custom-group-checkbox {
+  display: flex !important;
+  column-gap: 3rem;
+  flex-wrap: wrap !important;
+  justify-content: center !important;
+}
