Login, register user

--- a/src/assets/scss/layouts/_layout.scss
+++ b/src/assets/scss/layouts/_layout.scss
@@ -16,7 +16,7 @@
 .justify-flex-end {
   justify-content: flex-end !important;
 }
-.justify-center {
+.justify-center, .justify-content-center {
   justify-content: center !important;
 }
 .align-center,
